@@ -15,6 +15,9 @@ New interchangeable lenses:
 * Leica DG Nocticron 42.5mm f/1.2 Asph. Power OIS
 * Nikon AI-S Nikkor 105mm f/2.5
 * Nikon AF-S 200-500mm f/5.6E ED VR
+* Olympus M.Zuiko Digital 17mm f/1.2
+* Olympus M.Zuiko Digital 25mm f/1.2
+* Olympus M.Zuiko Digital 45mm f/1.2
 * Pentax SMC Takumar 50mm f/1.4
 * Sigma 85mm f/1.4 EX DG HSM
 * smc Pentax-DA L 18-50mm f/4-5.6 DC WR RE
@@ -43,6 +46,8 @@ Additional/updated data for:
 * Nikon AF Zoom-Nikkor 80-200mm f/2.8D ED
 * Nikon Lens Series E 28mm f/2.8
 * Nikon Lens Series E 50mm f/1.8
+* Olympus M.Zuiko Digital ED 9-18mm f/4.0-5.6
+* Olympus M.Zuiko Digital ED 12-100mm f/4.0 IS Pro
 * Sigma 17-50mm f/2.8 EX DC HSM
 * smc Pentax-D FA Macro 100mm f/2.8 WR
 
